previous commit did not added some files

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">discoverLondon</string>
+      <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCYJrmEB1tmRQhdXDvinqdfgv5SEmz7IBQ</string>
 </resources>
